added new mcp blogs and upadtes homepage

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: Veneno's Tech Blogs
-description: Techincal blogs based on my experices and techincal knowlegde i gained.
-show_downloads: true
+title: Arun's Tech Blogs
+description: Techincal blogs by arun - Solution Architect
+show_downloads: false
