--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,18 @@
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
+  - jekyll-seo-tag
+  - jekyll-feed
 
 title: Arun's Tech Blogs
 description: Techincal blogs by arun - Solution Architect
 show_downloads: false
+url: "https://arunsai63.github.io"
+baseurl: "/blogs"
+
+markdown: kramdown
+highlighter: rouge
+theme: null # If using remote_theme
+exclude: [README.md, Gemfile, Gemfile.lock]
+
+future: true
